[gd_scene load_steps=3 format=3 uid="uid://cky2fy1dmw30s"]

[ext_resource type="Script" path="res://Shadow/genericShadowProjectileSpawner.gd" id="1_66bq6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gb4yx"]
radius = 400.0

[node name="genericShadowProjectileSpawner" type="Area2D"]
script = ExtResource("1_66bq6")
metadata/_edit_vertical_guides_ = [-334.0, -201.0]
metadata/_edit_horizontal_guides_ = [-296.0, -248.0]

[node name="attackTimer" type="Timer" parent="."]

[node name="reloadTimer" type="Timer" parent="."]

[node name="enemyDetection" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gb4yx")

[node name="rayCaster" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="rayCaster"]
target_position = Vector2(0, 400)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="attackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="reloadTimer" to="." method="_on_reload_timer_timeout"]
